gengo/bind/sdk/Stderr.log
..\..\..\bin\debug\SDK\Headers\Events.h:243:5: error: unknown type name 'UINT64'
  243 |     UINT64 Tag;          // Tag of the target event that we want to modify
      |     ^
..\..\..\bin\debug\SDK\Headers\Events.h:244:5: error: unknown type name 'UINT64'
  244 |     UINT64 KernelStatus; // Kernel put the status in this field
      |     ^
..\..\..\bin\debug\SDK\Headers\Events.h:247:5: error: unknown type name 'BOOLEAN'
  247 |     BOOLEAN IsEnabled; // Determines what's the action (enable | disable | clear)
      |     ^
..\..\..\bin\debug\SDK\Headers\Events.h:257:5: error: unknown type name 'UINT64'
  257 |     UINT64  KernelStatus;      // Kernel put the status in this field
      |     ^
..\..\..\bin\debug\SDK\Headers\Events.h:258:5: error: unknown type name 'BOOLEAN'
  258 |     BOOLEAN IsShortCircuiting; // Determines whether to perform short circuting (on | off)
      |     ^
..\..\..\bin\debug\SDK\Headers\Events.h:272:5: error: unknown type name 'UINT64'
  272 |     UINT64 OptionalParam1; // Optional parameter
      |     ^
..\..\..\bin\debug\SDK\Headers\Events.h:273:5: error: unknown type name 'UINT64'
  273 |     UINT64 OptionalParam2; // Optional parameter
      |     ^
..\..\..\bin\debug\SDK\Headers\Events.h:274:5: error: unknown type name 'UINT64'
  274 |     UINT64 OptionalParam3; // Optional parameter
      |     ^
..\..\..\bin\debug\SDK\Headers\Events.h:275:5: error: unknown type name 'UINT64'
  275 |     UINT64 OptionalParam4; // Optional parameter
      |     ^
..\..\..\bin\debug\SDK\Headers\Events.h:276:5: error: unknown type name 'UINT64'
  276 |     UINT64 OptionalParam5; // Optional parameter
      |     ^
..\..\..\bin\debug\SDK\Headers\Events.h:277:5: error: unknown type name 'UINT64'
  277 |     UINT64 OptionalParam6; // Optional parameter
      |     ^
..\..\..\bin\debug\SDK\Headers\Events.h:351:5: error: unknown type name 'LIST_ENTRY'
  351 |     LIST_ENTRY
      |     ^
..\..\..\bin\debug\SDK\Headers\Events.h:355:5: error: unknown type name 'time_t'; did you mean 'size_t'?
  355 |     time_t CreationTime; // Date of creating this event
      |     ^~~~~~
      |     size_t
note: 'size_t' declared here
..\..\..\bin\debug\SDK\Headers\Events.h:357:5: error: unknown type name 'UINT32'
  357 |     UINT32 CoreId; // determines the core index to apply this event to, if it's
      |     ^
..\..\..\bin\debug\SDK\Headers\Events.h:360:5: error: unknown type name 'UINT32'
  360 |     UINT32 ProcessId; // determines the process id to apply this to
      |     ^
..\..\..\bin\debug\SDK\Headers\Events.h:364:5: error: unknown type name 'BOOLEAN'
  364 |     BOOLEAN IsEnabled;
      |     ^
..\..\..\bin\debug\SDK\Headers\Events.h:366:5: error: unknown type name 'BOOLEAN'
  366 |     BOOLEAN EnableShortCircuiting; // indicates whether the short-circuiting event
      |     ^
..\..\..\bin\debug\SDK\Headers\Events.h:369:5: error: unknown type name 'VMM_CALLBACK_EVENT_CALLING_STAGE_TYPE'
  369 |     VMM_CALLBACK_EVENT_CALLING_STAGE_TYPE EventStage; // reveals the calling stage of the event
      |     ^
..\..\..\bin\debug\SDK\Headers\Events.h:372:5: error: unknown type name 'BOOLEAN'
  372 |     BOOLEAN HasCustomOutput; // Shows whether this event has a custom output
      |     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
